--- a/user-microservice/compose.yaml
+++ b/user-microservice/compose.yaml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  task-hunter-user-db:
+  eshop-user-db:
     image: 'postgres:15.0'
-    container_name: 'task-hunter-user-db'
+    container_name: 'eshop-user-db'
     environment:
       - 'POSTGRES_DB=postgres'
       - 'POSTGRES_PASSWORD=postgres'
@@ -16,12 +16,12 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-  task-hunter-user-backend:
+  eshop-user-backend:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - '8081:8081'
     depends_on:
-      task-hunter-user-db:
+      eshop-user-db:
         condition: service_healthy
