--- a/user-microservice/src/main/resources/application.yaml
+++ b/user-microservice/src/main/resources/application.yaml
@@ -8,8 +8,11 @@ spring:
     password: postgres
     username: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:32771/postgres
+    url: jdbc:postgresql://database/postgres
   flyway:
-    url: jdbc:postgresql://localhost:32771/postgres
+    url: jdbc:postgresql://database/postgres
     user: postgres
     password: postgres
+  
+  jpa:
+    show-sql: true
