add parent module replace Dockerfile change RedisConfig.java

--- a/user-microservice/pom.xml
+++ b/user-microservice/pom.xml
@@ -2,13 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
-        <relativePath/>
+        <groupId>com.wasd</groupId>
+        <artifactId>eshop</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    
-    <groupId>com.wasd</groupId>
+
     <artifactId>user-microservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     
@@ -80,26 +79,4 @@
         
     </dependencies>
     
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <image>${docker.image.prefix}/${project.artifactId}:latest</image>
-                    <layers>
-                        <enabled>true</enabled>
-                    </layers>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-
-    </build>
 </project>
