--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     
     <modules>
         <module>user-microservice</module>
+        <module>config-server</module>
     </modules>
     
     <groupId>com.wasd</groupId>
