--- a/config-server/src/main/resources/config/user-service.yaml
+++ b/config-server/src/main/resources/config/user-service.yaml
@@ -6,9 +6,9 @@ spring:
     password: postgres
     username: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://database:5432/postgres
   flyway:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://database:5432/postgres
     user: postgres
     password: postgres
   jpa:
