--- a/config-server/src/main/resources/config/product-service.yaml
+++ b/config-server/src/main/resources/config/product-service.yaml
@@ -1,14 +1,14 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   datasource:
     password: postgres
     username: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://user-database:5432/postgres
+    url: jdbc:postgresql://product-database:5433/postgres
   flyway:
-    url: jdbc:postgresql://user-database:5432/postgres
+    url: jdbc:postgresql://product-database:5433/postgres
     user: postgres
     password: postgres
   jpa:
@@ -16,5 +16,5 @@ spring:
   data:
     redis:
       host: localhost
-      port: 6379
+      port: 6380
       password: 123
