--- a/config-server/src/main/resources/config/product-service.yaml
+++ b/config-server/src/main/resources/config/product-service.yaml
@@ -6,9 +6,9 @@ spring:
     password: postgres
     username: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://product-database:5433/postgres
+    url: jdbc:postgresql://productdb:5433/postgres
   flyway:
-    url: jdbc:postgresql://product-database:5433/postgres
+    url: jdbc:postgresql://productdb:5433/postgres
     user: postgres
     password: postgres
   jpa:
