--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,7 +85,7 @@ services:
       - 'POSTGRES_USER=postgres'
       - 'PGUSER=postgres'
     ports:
-      - '5433:5433'
+      - '5433:5432'
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
       interval: 10s
@@ -94,7 +94,7 @@ services:
     networks:
       backend:
         aliases:
-          - "product-database"
+          - "productdb"
   product-service-backend:
     container_name: 'product-service-backend'
     build:
