rename product service to order service

--- a/config-server/src/main/resources/config/order-service-dev.yaml
+++ b/config-server/src/main/resources/config/order-service-dev.yaml
@@ -15,6 +15,6 @@ spring:
     show-sql: true
   data:
     redis:
-      host: product-cache
+      host: order-cache
       port: 6379
       password: 123
