--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>user-microservice</module>
         <module>config-server</module>
-        <module>product-microservice</module>
+        <module>order-microservice</module>
     </modules>
     
     <groupId>com.wasd</groupId>
