add base order dtos

--- a/order-microservice/pom.xml
+++ b/order-microservice/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>order-microservice</artifactId>
     <packaging>jar</packaging>
 
-    <name>product-microservice</name>
+    <name>order-microservice</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,7 +39,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -108,6 +108,7 @@
             <artifactId>jedis</artifactId>
             <version>5.1.0</version>
         </dependency>
+    
     </dependencies>
 
 </project>
