--- a/order-microservice/pom.xml
+++ b/order-microservice/pom.xml
@@ -119,6 +119,12 @@
             <version>0.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
