add base project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,9 @@ services:
         condition: service_healthy
       user-service-cache:
         condition: service_started
+        
   # Config server
+  
   config-server:
     container_name: 'config-server'
     ports:
@@ -62,8 +64,8 @@ services:
       backend:
         aliases:
           - "configserver"
-
-#Order service
+  
+  #Order service
 
   order-service-cache:
     container_name: 'order-service-cache'
@@ -111,8 +113,57 @@ services:
         condition: service_healthy
       order-service-cache:
         condition: service_started
-
   
+  #Product service
+
+  product-service-cache:
+    container_name: 'product-service-cache'
+    image: redis:7
+    restart: on-failure
+    command: bash -c "redis-server --appendonly yes --requirepass 123"
+    ports:
+      - '6381:6379'
+    networks:
+      backend:
+        aliases:
+          - "product-cache"
+  product-service-database:
+    image: 'postgres:15.0'
+    container_name: 'product-service-database'
+    environment:
+      - 'POSTGRES_DB=postgres'
+      - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_USER=postgres'
+      - 'PGUSER=postgres'
+    ports:
+      - '5434:5432'
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      backend:
+        aliases:
+          - "productdb"
+  product-service-backend:
+    container_name: 'product-service-backend'
+    build:
+      context: .
+      dockerfile: dockerfiles/Dockerfile-product-service
+    ports:
+      - '8084:8084'
+    networks:
+      - backend
+    depends_on:
+      config-server:
+        condition: service_started
+      product-service-database:
+        condition: service_healthy
+      product-service-cache:
+        condition: service_started
+
+
 networks:
   backend:
     driver: bridge
