add order history service, order history entity

--- a/order-microservice/pom.xml
+++ b/order-microservice/pom.xml
@@ -122,6 +122,12 @@
             <version>${spring-boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.7.5</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
