--- a/user-microservice/src/main/resources/application.yaml
+++ b/user-microservice/src/main/resources/application.yaml
@@ -3,18 +3,18 @@ server:
 
 spring:
   datasource:
-    password: postgres
+    password: 
     username: postgres
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
   flyway:
     url: jdbc:postgresql://localhost:5432/postgres
     user: postgres
-    password: postgres
+    password: 
   jpa:
     show-sql: true
   data:
     redis:
       host: localhost
       port: 6379
-      password: 123
+      password: 
